package com.playersguidejava.OLDday39till43.rooms;

public abstract class Room {

    public void action() {
    }

}